# faturamento-fiscal-py

./: Dockerfile  docker-compose.yml  main.py  pyproject.toml
app/: main.py
app/html_src/: index.html
app/pdf_builder/: pdf_builder.py
app/schemas/: root_get_schema.py
app/utils/: __init__.py  format_str_decimal.py  get_range_in_month.py
html_src/: style.css
