[tool.poetry]
authors = ["walefy <walefyd1@gmail.com>"]
description = ""
name = "faturamento-fiscal"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
beautifulsoup4 = "^4.12.2"
flake8 = "^6.1.0"
python = ">=3.11,<3.13"
weasyprint = "^60.1"
pandas = "^2.1.1"
fastapi = "^0.104.0"
gunicorn = "^21.2.0"
uvicorn = "^0.23.2"
babel = "^2.13.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
